# mugfx

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: wall.cmake
examples/: CMakeLists.txt  hello_triangle.cpp  render_targets.cpp  window.cpp  window.hpp
include/: mugfx.h  mugfx.hpp
notes/: uniforms.md
src/: shared.cpp  shared.hpp
src/opengl/: opengl.cpp
src/opengl/glad/include/glad/: gl.h  glad.h  gles2.h
src/opengl/glad/src/: gl.c  glad.c  gles2.c
